Closed
Bug 488475
Opened 16 years ago
Closed 16 years ago
"Assertion failure: !(pn->pn_dflags & flag), at ../jsparse.h"
Categories
(Core :: JavaScript Engine, defect, P1)
Core
JavaScript Engine
Tracking
()
VERIFIED
FIXED
mozilla1.9.2a1
People
(Reporter: gkw, Assigned: brendan)
References
Details
(4 keywords, Whiteboard: fixed-in-tracemonkey)
Attachments
(1 file)
|
572 bytes,
patch
|
brendan
:
review+
|
Details | Diff | Splinter Review |
(function(){var x; (x = [] for each (functional in [-1/0])})();
asserts dbg TM tip shell without -j at Assertion failure: !(pn->pn_dflags & flag), at ../jsparse.h:660
Flags: blocking1.9.1?
| Reporter | ||
Comment 1•16 years ago
|
||
autoBisect shows this is probably related to bug 488015.
The first bad revision is:
changeset: 27205:78a21b8efe1b
tag: tip
user: Brendan Eich
date: Wed Apr 15 01:57:13 2009 -0700
summary: Bug 488015 - Crash [@ js_GetUpvar ] (also bogus JS errors, also probably Crash [@js_Interpret]) (future r=mrbkap, see bug).
Blocks: 488015
Keywords: regression
| Assignee | ||
Comment 2•16 years ago
|
||
Thanks -- will mop up today.
/be
Assignee: general → brendan
Status: NEW → ASSIGNED
Priority: -- → P1
Target Milestone: --- → mozilla1.9.1b4
| Assignee | ||
Comment 3•16 years ago
|
||
Generator expressions, my nemesis.
/be
| Assignee | ||
Comment 4•16 years ago
|
||
r=me, this one is a mulligan.
/be
Attachment #372883 -
Flags: review+
| Assignee | ||
Comment 5•16 years ago
|
||
Whiteboard: fixed-in-tracemonkey
Comment 6•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Updated•16 years ago
|
Flags: blocking1.9.1? → blocking1.9.1+
Comment 7•16 years ago
|
||
Keywords: fixed1.9.1
Comment 8•16 years ago
|
||
Verified fixed with testcase given in comment 0 on trunk and 1.9.1 with the
following debug builds:
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre)
Gecko/20090422 Minefield/3.6a1pre ID:20090422224452
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1b4pre)
Gecko/20090422 Shiretoko/3.5b4pre ID:20090422122043
Status: RESOLVED → VERIFIED
Keywords: fixed1.9.1 → verified1.9.1
OS: Mac OS X → All
Hardware: x86 → All
Target Milestone: mozilla1.9.1b4 → mozilla1.9.2a1
| Reporter | ||
Updated•16 years ago
|
Flags: in-testsuite?
You need to log in
before you can comment on or make changes to this bug.
Description
•