Bug 488475 - "Assertion failure: \!(pn->pn_dflags & flag), at ../jsparse.h" (r=me).